--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
