--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
+    "qrcodejs2": "^0.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
