--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
-    "qrcodejs2": "^0.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
@@ -41,6 +40,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.1",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
