--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Dependencias
+node_modules
+.pnp
+.pnp.js
+
+# Build y producción
+dist
+dist-ssr
+build
+*.local
+
 # Logs
 logs
 *.log
@@ -7,14 +18,40 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Variables de entorno (IMPORTANTE: No subir al repositorio)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+.env.staging
+
+# Archivos sensibles de facturación
+*.pfx
+*.p12
+*.key
+*.pem
+*.crt
+*.cer
+certificados/
+keys/
+secrets/
+
+# PDFs generados (no subir facturas de prueba)
+*.pdf
+public/*.pdf
+
+# Testing
+coverage
+*.coverage
+.nyc_output
+.jest-cache
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -22,5 +59,26 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.swp
+*~
 
-.env
+# Sistema operativo
+Thumbs.db
+Desktop.ini
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Temporales
+tmp/
+temp/
+*.tmp
+*.bak
+*.backup
+*.cache
+
+# Netlify
+.netlify
+
+# Local History
+.history/
